Fixed import path issues

--- a/ins-001/web/src/pages/join/[token].astro
+++ b/ins-001/web/src/pages/join/[token].astro
@@ -5,8 +5,8 @@
  * Entry point for share link recipients
  */
 
-import InstrumentLayout from '../../../layouts/InstrumentLayout.astro';
-import JoinGame from '../../../components/JoinGame';
+import InstrumentLayout from '../../layouts/InstrumentLayout.astro';
+import JoinGame from '../../components/JoinGame';
 
 const { token } = Astro.params;
 ---
