--- a/ins-001/web/src/styles/global.css
+++ b/ins-001/web/src/styles/global.css
@@ -4,7 +4,7 @@
  * Imports design system tokens and base styles
  */
 
-@import '../../../shared/design-system/tokens.css';
+@import './tokens.css';
 
 /* Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Fira+Code:wght@400;500;600&family=Lora:ital,wght@0,400;0,500;1,400&display=swap');
