--- a/ins-001/web/src/layouts/InstrumentLayout.astro
+++ b/ins-001/web/src/layouts/InstrumentLayout.astro
@@ -33,7 +33,8 @@ const { id, title, version = '0.1', status = 'live' } = Astro.props;
   </body>
 </html>
 
-<style>
+<style is:global>
+  /* CSS Version: 2025-01-12-fix-ui-alignment */
   @import '../styles/global.css';
   @import '../styles/components.css';
   
