--- a/ins-001/web/src/pages/ins-001/join/[token].astro
+++ b/ins-001/web/src/pages/ins-001/join/[token].astro
@@ -8,8 +8,8 @@
 // This route must be server-rendered since tokens are dynamic
 export const prerender = false;
 
-import InstrumentLayout from '../../layouts/InstrumentLayout.astro';
-import JoinGame from '../../components/JoinGame';
+import InstrumentLayout from '../../../layouts/InstrumentLayout.astro';
+import JoinGame from '../../../components/JoinGame';
 
 const { token } = Astro.params;
 ---
