--- a/ins-001/web/src/pages/index.astro
+++ b/ins-001/web/src/pages/index.astro
@@ -4,6 +4,9 @@
  * Based on instruments-landing-mockup.html
  */
 
+// Explicitly set as server-rendered (not prerendered)
+export const prerender = false;
+
 import '../styles/global.css';
 import '../styles/components.css';
 import LandingNav from '../components/landing/LandingNav.astro';
