Fix PhronosLogo import in LandingNav - use named export

--- a/ins-001/web/src/components/landing/LandingNav.astro
+++ b/ins-001/web/src/components/landing/LandingNav.astro
@@ -4,7 +4,7 @@
  * Adapted from phronos-site Nav.astro for instruments domain
  */
 
-import PhronosLogo from '../ui/PhronosLogo';
+import { PhronosLogo } from '../ui/PhronosLogo';
 ---
 
 <nav class="landing-nav">
