--- a/ins-001/web/src/layouts/InstrumentLayout.astro
+++ b/ins-001/web/src/layouts/InstrumentLayout.astro
@@ -24,7 +24,7 @@ const { id, title, version = '0.1', status = 'live' } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="description" content="INS-001 Semantic Associations - Measure how you think" />
+    <meta name="description" content={`${id} ${title} - Measure how you think`} />
     <title>{title} | Phronos</title>
     <meta name="page-version" content="instrument-layout-v2.0" />
   </head>
