--- a/ins-001/web/src/pages/ins-001/ins-001-2/index.astro
+++ b/ins-001/web/src/pages/ins-001/ins-001-2/index.astro
@@ -1,12 +1,12 @@
 ---
 /**
- * INS-001.2 Semantic Bridging - Main Entry Page
+ * INS-001.2 Semantic Union - Main Entry Page
  */
 
 import InstrumentLayout from '../../../layouts/InstrumentLayout.astro';
 import BridgingGame from '../../../components/bridging/BridgingGame';
 ---
 
-<InstrumentLayout id="INS-001.2" title="SEMANTIC BRIDGING" version="0.1" status="live">
+<InstrumentLayout id="INS-001.2" title="SEMANTIC UNION" version="0.1" status="live">
   <BridgingGame client:load />
 </InstrumentLayout>
